unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry__c/ia_crm__Intacct_Journal_Entry__c.object-meta.xml
<CustomObject>
    <label>Intacct Journal Entry</label>
    <nameField>
        <label>Intacct Journal Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intacct Journal Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>