unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry__c/fields/ia_crm__Currency__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Currency__c</fullName>
    <description>Stores the currency code, used for Intacct sync.</description>
    <label>Transaction Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>