unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry__c/fields/ia_crm__Intacct_Journal__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intacct Journal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ia_crm__Intacct_Journal__c.ia_crm__Status__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ia_crm__Intacct_Journal__c</referenceTo>
    <relationshipLabel>Intacct Journal Entries (Intacct Journal)</relationshipLabel>
    <relationshipName>IntacctJournals</relationshipName>
    <type>Lookup</type>
</CustomField>