unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry__c/fields/ia_crm__Intacct_Journal_ID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Journal_ID__c</fullName>
    <label>Intacct Journal ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>