unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry__c/fields/ia_crm__Intacct_Sync_Errors__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Sync_Errors__c</fullName>
    <label>Intacct Sync Errors</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>