unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry__c/fields/ia_crm__Is_Statistical__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Is_Statistical__c</fullName>
    <formula>ia_crm__Intacct_Journal__r.ia_crm__Is_Statistical__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Statistical</label>
    <type>Checkbox</type>
</CustomField>