unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry__c/fields/ia_crm__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Intacct Journal Entries</relationshipLabel>
    <relationshipName>Intacct_Journal_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>