unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry__c/fields/ia_crm__Reverse_Date__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Reverse_Date__c</fullName>
    <label>Reverse Date</label>
    <type>Date</type>
</CustomField>