unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry__c/fields/ia_crm__SB_Description__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SB_Description__c</fullName>
    <label>SB Description</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>