unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry__c/fields/ia_crm__SB_Intacct_Journal__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SB_Intacct_Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SB Intacct Journal</label>
    <referenceTo>ia_crm__Intacct_Journal__c</referenceTo>
    <relationshipLabel>Intacct Journal Entries (SB Intacct Journal)</relationshipLabel>
    <relationshipName>Intacct_Journal_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>