unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry__c/fields/ia_crm__Sync_With_Intacct__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Sync_With_Intacct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync With Intacct</label>
    <type>Checkbox</type>
</CustomField>