unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry__c/fields/ia_crm__Synced_With_Intacct_Date__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Synced_With_Intacct_Date__c</fullName>
    <label>Synced With Intacct Date</label>
    <type>DateTime</type>
</CustomField>