unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry__c/listViews/ia_crm__All.listView-meta.xml
<ListView>
    <fullName>ia_crm__All</fullName>
    <columns>NAME</columns>
    <columns>ia_crm__Intacct_Journal__c</columns>
    <columns>ia_crm__Related_Record_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ia_crm__Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ia_crm__Intacct_Sync_Status__c</columns>
    <columns>ia_crm__Intacct_Sync_Status_Image__c</columns>
    <columns>ia_crm__Is_Statistical__c</columns>
    <columns>ia_crm__Synced_With_Intacct_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>